# lab2

./: CMakeLists.txt  Coefficient2.cpp  Coefficient2.h  Interpolation.cpp  Interpolation.h  Point.cpp  Point.h  interpolTask.cpp  interpolTask.h  main.cpp  types.h
test/: albina.txt  ansvar3.txt  ansvar4.txt  ansvar7.txt  anton.txt  laba  laba~  misha.txt  test.txt  var14.txt  var14.txt~  var2.txt  var3.txt  var4.txt  var7.txt  var9.txt~
test/Debug/: zadacha2
